--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"mongodb": "^6.18.0",
 		"mongoose": "^8.18.0",
 		"next": "15.5.0",
+		"next-nprogress-bar": "^2.4.7",
 		"next-themes": "^0.4.6",
 		"react": "19.1.0",
 		"react-dom": "19.1.0",
