--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"react-hook-form": "^7.62.0",
 		"react-number-format": "^5.4.4",
 		"sonner": "^2.0.7",
+		"swr": "^2.3.6",
 		"tailwind-merge": "^3.3.1",
 		"tailwindcss": "^3.4.17",
 		"tailwindcss-animate": "^1.0.7",
