--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
 		"@radix-ui/react-dialog": "^1.1.15",
 		"@radix-ui/react-dropdown-menu": "^2.1.16",
 		"@radix-ui/react-label": "^2.1.7",
+		"@radix-ui/react-popover": "^1.1.15",
+		"@radix-ui/react-scroll-area": "^1.2.10",
 		"@radix-ui/react-select": "^2.2.6",
 		"@radix-ui/react-slot": "^1.2.3",
 		"@tailwindcss/postcss": "^4.1.12",
@@ -23,6 +25,7 @@
 		"firebase": "^12.1.0",
 		"firebase-admin": "^13.4.0",
 		"jsonwebtoken": "^9.0.2",
+		"lucide": "^0.544.0",
 		"lucide-react": "^0.541.0",
 		"mongodb": "^6.18.0",
 		"mongoose": "^8.18.0",
